# ils-smoothing

./: .flake8  .gitignore  .mypy.ini  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: package-tests.yml
docs/source/: api.md  conf.py  index.md  index.rst
docs/source/api/: ils_smoothing.rst  modules.rst
scripts/: run-mypy
src/ils_smoothing/: __init__.py  _version.py  cli.py  filter.py
src/stylization/: _effect.py  _types.py  cli.py  effects.py  rotoscope.py  toning.py
tests/: test_filter.py
