[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ils-smoothing"
version = "1.0.0"
authors = [{name="Richard Rzeszutek"}]
description = "Python implementation of \"Real-time Image Smoothing via Iterative Least Squares\"."
readme = "README.md"
requires-python = "==3.13.*"
license = "BSD-3-Clause"

# Conda takes care of numpy, scipy, and scikit-image dependencies
dependencies = [
    "click == 8.1.7",
    "numpy",
    "scipy",
    "scikit-image"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-github-actions-annotate-failures",
]

docs = [
    "Sphinx == 8.1.3",
    "furo == 2024.8.6"
]

[project.scripts]
ils = "ils_smoothing.cli:main"
