[metadata]
name = ils-smoothing
license = BSD 3-Clause license
version = 1.0

[options]
package_dir =
    =src
packages = find:
install_requires =
    click
    numpy
    scipy
    scikit-image
    tqdm

[options.entry_points]
console_scripts =
    ils = ils_smoothing.cli:main

[options.extras_require]
dev =
    flake8
    mypy
