[metadata]
name = ils-smoothing
license = BSD 3-Clause license
version = attr:ils_smoothing._version.VERSION

[options]
package_dir =
    =src
packages = find:
install_requires =
    click
    numpy
    scipy
    scikit-image
    tqdm

[options.entry_points]
console_scripts =
    ils = ils_smoothing.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    pytest

[flake8]
max-line-length = 100

[mypy]
ignore_missing_imports = True
