[metadata]
name = ils-smoothing
license = BSD 3-Clause license
version = 1.0

[options]
include_package_date = True
package_dir =
    =src
packages = find:
install_requires =
    click
    numpy
    scipy
    scikit-image
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ils = ils_smoothing.cli:main
    stylize = stylization.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    pytest

docs =
    sphinx
    sphinx-rtd-theme

[flake8]
max-line-length = 100

[mypy]
ignore_missing_imports = True
